--- a/weekly_mission_3/my_launchx_app/package.json
+++ b/weekly_mission_3/my_launchx_app/package.json
@@ -1,1 +1,14 @@
-
+{
+  "name": "my_launchx_app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
