--- a/weekly_mission_3/my_launchx_app/package.json
+++ b/weekly_mission_3/my_launchx_app/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "start": "node index.js"
   },
   "keywords": [],
